--- a/LaundryManagerApp/app/src/main/AndroidManifest.xml
+++ b/LaundryManagerApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LaundryManagerApp">
-        <activity android:name=".MainActivity">
+        <activity android:name=".HeroActivity"/>
+        <activity android:name=".ui.login.LoginActivity"/>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".RegistrationActivity"/>
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
